--- a/style.css
+++ b/style.css
@@ -1,111 +1,396 @@
-nav.navbar-default {
-	background-color: white;
-	border:none;
+@font-face {
+    font-family: OpenSans;
+    src: url(fonts/opensans.ttf);
+   }
+body {
+	max-width:1520px;
+	font-family: OpenSans,sans-serif;
+}
+.header{
 	display: flex;
-	justify-content:space-between;
-}
-div.menu-row {
-	display: flex;
-	margin-left:;
-}
-button.navbar-toggle {
-	border: none;
-}
-@media (min-width: 768px) {
-button.navbar-toggle {
-    display:block;
+	justify-content: space-between;
+	align-items: center;
+	border: 1px solid red;
 }
 .logo {
-	margin-left:;
+	padding-left: 65px;
 }
 .logo-img {
-	margin-top: 8%;
+	
 }
 .number {
-	padding:;
-	border: 1px solid yellow;
-	background: yellow;
-	border-radius: 2px;
+	background: #ffd200;
+	border-radius: 10px;
+	padding: 12px 45px;
 }
 .login {
-	width: 10%;
+	padding-left: 55px;
 }
 .login-img {
-	width:70%;
+	
 }
 .left-head {
 	display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+	margin-left: 160px;
 }
 .right-head {
 	display: flex;
-    justify-content: flex-end;
-    align-items: center;
+	align-items: center;
+	margin-right: 140px;
+    padding: 21px;
+    
 }
 .main-image {
 	background: url(images/banner.png) center;
 	background-size: cover;
 	text-align: center;
-	padding-top: 60px;
+	padding-top: 50px;
 	padding-bottom: 430px;
 }
+.main-image__caption {
+	margin-bottom: -10px;
+	font-size: 35px;
+}
+.main-image__item {
+	font-size: 17px;
+}
+.main-image__button {
+	margin-top: 70px;
+	padding: 25px 45px;
+	background: rgba(255, 255, 255, 0);
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 17px;
+}
+.main-image__button:hover {
+	background: rgba(214, 203, 192, 0.7);
+	transition: 0.4s;
+	cursor: pointer;
+}
+.main-image__button:focus {
+	
+	border-radius: 10px;
+}
+
 .instraction {
 	display: flex;
 	justify-content: space-around;
 	padding-top:5%;
-	padding-bottom: 10%; 
+	
+}
+.instraction_caption    {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 10%; 
+}
+.item_caption {
+	text-align: center;
+	font-weight: bold;
+	margin-top: 20px;
 }
 .item1 {
 	background:url(images/cloud.png) center;
 	background-repeat: no-repeat;
+	border:4px solid #ffd200;
+	border-radius: 50%;
+	width: 130px;
+	height: 130px;
 }
+/*.item1::after {
+	content: '';
+	border-top: 1px dashed #000;
+	width: 20px;
+	height: 1px;
+	background-color: #ffd200;
+	display: inline-block;
+	vertical-align: middle;
+}*/
 .item2 {
 	background:url(images/screen.png) center;
 	background-repeat: no-repeat;
+	border:4px solid #ffd200;
+	border-radius: 50%;
+	width: 130px;
+	height: 130px;
 }
 .item3 {
 	background:url(images/hand.png) center;
 	background-repeat: no-repeat;
+	border:4px solid #ffd200;
+	border-radius: 50%;
+	width: 130px;
+	height: 130px;
 }
 .item4 {
-	background:url(images/truck.png) center;
+	background: url(images/truck.png) center;
 	background-repeat: no-repeat;
+	border:4px solid #ffd200;
+	border-radius: 50%;
+	width: 130px;
+	height: 130px;
+	
+
 }
 .advantage_cover {
 	background: #f3f0e7;
-	text-align: center;
 	padding-top: 5%;
 	padding-bottom: 10%; 
+	text-align: center;
+}
+.advantage_caption_h2 {
+	
 }
 .advantage {
 	display: flex;
 	justify-content: space-around;
 	padding-top: 5%;
+}
+.advantage_caption {
 	padding-bottom: 10%; 
+	display: flex;
+	justify-content: space-around;
+}
+.advantage_caption_item {
+	font-weight: bold;
 }
 .import {
-	width: 280px;
-	height: 280px;
+	width: 270px;
+	height: 270px;
 	border-radius: 50%;
 	background: url(images/round_adv.png) no-repeat;
 	background-size: auto 280px;
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .import-img {
-	margin-top: 37px;
-    margin-left: 37px;
+	
 }
 .edit {
-	width: 280px;
-	height: 280px;
+	width: 270px;
+	height: 270px;
 	border-radius: 50%;
 	background: url(images/kitty.png) no-repeat -70px 0px;
     background-size: auto 280px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .template {
-	width: 280px;
-	height: 280px;
+	width: 270px;
+	height: 270px;
 	border-radius: 50%;
 	background: url(images/template.png) no-repeat -20px -30px;
     background-size: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.advantage__button {
+	margin-top: 70px;
+	padding: 25px 45px;
+	background: #e11a27;
+	color: white;
+	border: none;
+    border-radius: 10px;
+    font-size: 17px;
+}
+.solutions__maincaption {
+	text-align: center;
+	margin: 70px;
+	font-size: 35px;
+}
+.solutions  {
+	display: flex;
+	justify-content: space-around;
+	margin-bottom: 115px;
+}
+.solutions_bestseller {
+	position: relative;
+}
+.solutions_bestseller::before {
+	content: url(images/bestseller.png);
+	position: absolute;
+	top: -20px;
+	left: 18%;
+}
+.solutions_bestseller::after {
+	position: absolute;
+	content: 'BESTSELLER';
+	color: red;
+	top: -18px;
+    left: 36%;
+    font-weight: bold;
+}
+.solutions_item  {
+	background: #ffd200;
+	border-radius: 10px;
+	width: 300px;
+}
+.solutions_item__captiontop {
+	padding:40px 60px;
+	text-align: center;
+	font-size: 20px;
+}
+.solutions_item__section {
+	background: white;
+	margin:0 6px;
+	height: 250px;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.solutions_item__ul {
+	margin: 20px 0 0 0;
+	padding-left: 20px;
+}
+.solutions_item__section__li {
+ list-style: none;
+ padding-bottom: 10px;
+}
+.solutions_item__section__li::before {
+ content: url(images/daw.png);
+ padding-right: 20px;
+}
+.solutions_item__price {
+	text-align: center;
+	font-size: 40px;
+	font-weight: bold;
+}
+.solutions_item__captionbottom {
+	text-align: center;
+}
+.testimonials {
+	background: url(images/book.png) center;
+	background-size: cover;
+}
+.testimonials_container {
+	width: 540px;
+	margin-left: 75px;
+}
+.testimonials__caption {
+	padding-top: 40px;
+	padding-bottom: 50px;
+	font-size: 35px;
+}
+.testimonials__author {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+.testimonials__author__h4 {
+ margin-bottom: 5px;
+ font-size: 18px;
+ font-weight: bold;
+}
+.testimonials__author__p {
+margin-top: 5px;
+}
+.author {
+	width: 170px;
+	height: 170px;
+	border-radius: 50%;
+	background: url(images/author.png) no-repeat;
+	background-size: cover;
+}
+.author__caption {
+	margin-left: 15px;
+}
+.testimonials__text__link__container {
+	text-align: right;
+	position: relative;
+}
+.testimonials__link {
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+}
+.testimonials__link::after {
+	content: url(images/arrow.png);
+	position: absolute;
+    top: -4px;
+    margin-left: 4px;
+}
+.testimonials__button_wrapper {
+	text-align: center;
+	padding-bottom: 40px;
+}
+.testimonials__button {
+	margin-top: 70px;
+	padding: 25px 45px;
+	background: rgba(255, 255, 255, 0);
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 17px;
+}
+.terms {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 90px;
+	margin-bottom: 75px;
+}
+.terms__item {
+	width: 300px;
+}
+.terms__item__caption {
+	text-align: center;
+	background: #ffd200;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    margin-bottom: 5px;
+    padding: 10px;
+}
+
+.terms__item__section {
+	background: #f7f0e6;
+	height: 230px;
+	padding: 30px;
+}
+.terms__item__section__li {
+	padding-bottom: 10px;
+}
+.terms__item__shiping {
+	color: red;
+}	
+.terms__button__container {
+	text-align: center;
+	margin-bottom: 110px;
+}
+.terms__button {
+	padding: 25px 30px;
+	background: #e11a27;
+	color: white;
+	border: none;
+    border-radius: 10px;
+    font-size: 17px;
+}
+.footer {
+	background: #ffd200;
+	padding-top: 50px;
+}
+.footer__container {
+	display: flex;
+	justify-content: flex-start;
+	margin-left: 75px;
+}
+.footer__item {
+	border-top: 1px solid black;
+	margin-right: 75px;
+	width: 150px;
+}
+.footer__item__ul {
+	padding-left: 0;
+}
+.footer__item__li {
+	list-style: none;
+}
+.footer__item.last {
+	margin-left: 225px;
+	padding-top: 20px;
+}
+.footer__bottom {
+	text-align: center;
+	padding-top: 120px;
+	padding-bottom: 60px;
 }
